--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,17 +5,15 @@
   "license": "Apache-2.0",
   "type": "module",
   "scripts": {
-    "deploy:schema": "node --loader ts-node/esm scripts/deploy-eas-schema.ts",
+    "deploy:schema": "tsx scripts/deploy-eas-schema.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ethereum-attestation-service/eas-sdk": "^2.0.0",
-    "ethers": "^6.11.0",
-    "dotenv": "^16.4.0"
+    "ethers": "^6.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.4.0",
-    "ts-node": "^10.9.0"
+    "tsx": "^4.7.0"
   }
 }
