feat: Phase 1 complete — working engine, MCP server, wired API
Core engine (packages/core):
- AegisEngine.query(): full 7-step pipeline
  (identity resolution → fan-out → fraud detection →
   Subjective Logic CBF fusion → Ev-Trust λ=0.15 → risk mapping → cache)
- GitHubProvider.evaluate(): author_reputation + repo_health signals
  via GitHub REST API (no auth required for public repos)
- scoring.ts: Subjective Logic opinion fusion (Jøsang 2001) + Ev-Trust
  evolutionary stability adjustment (arXiv:2512.16167v2, λ=0.15)
- cache.ts: in-memory TTL cache, zero native dependencies
- Removed drizzle-orm (Node v24 incompatibility); pure in-memory for MVP

MCP server (packages/mcp):
- trust_query: full trust report with score, risk, signals, evidence
- should_proceed: binary go/no-go with reasoning
- trust_explain: narrative explanation using signal evidence
- examples/claude_desktop_config.json for Claude Desktop install

API (packages/api):
- Wired POST /v1/trust/query and GET /v1/trust/score/:subject to engine
- GET /health returns provider health + EAS schema UID + uptime

Demo:
- examples/demo.ts: standalone end-to-end demo with progress bars

Smoke test: github:tankcdr → 50.1% score, medium risk, review ✅

All 3 packages build clean with 0 TypeScript errors.
pnpm -r build: ✅ @aegis-protocol/core @aegis-protocol/api @aegis-protocol/mcp

Hackathon: Synthesis 2026 — Track: Agents that trust | ⛵ Charon

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aegis-protocol/core",
   "version": "0.1.0",
-  "description": "Aegis trust engine — framework-agnostic, embeddable",
+  "description": "Aegis Protocol trust engine — embeddable, zero AWS dependency",
   "license": "Apache-2.0",
   "type": "module",
   "main": "./dist/index.js",
@@ -15,17 +15,13 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "drizzle-orm": "^0.30.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.4.0",
-    "jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "typescript": "^5.4.0"
   }
 }
