--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "ethers": "^6.11.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
