chore: gitignore .next build cache and web node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ coverage/
 # ─── Future infra ─────────────────────────────────────────────────────────────
 .sst/
 .fly/
+apps/web/.next/
+apps/web/node_modules/
