--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,33 @@
-# Aegis — self-hosted deployment
-# SQLite + in-memory cache — zero dependencies, one command.
+# Aegis API — self-hosted deployment
 #
-# Usage:
-#   cp .env.example .env    # configure your API keys
-#   docker compose up
+# Quickstart:
+#   cp .env.example .env
+#   docker compose up -d
+#
+# Full local dev (API + UI):
+#   make dev
+#
+# API:  http://localhost:3000
+# Docs: http://localhost:3000/skill.md
 
 services:
-  aegis:
+  api:
     build: .
     ports:
       - "3000:3000"
     environment:
       NODE_ENV: production
-      DATABASE_URL: file:/data/aegis.db
-      CACHE_DRIVER: memory
+      PORT: 3000
+      BASE_URL: http://localhost:3000
       GITHUB_TOKEN: ${GITHUB_TOKEN:-}
+      TWITTER_BEARER_TOKEN: ${TWITTER_BEARER_TOKEN:-}
       MOLTBOOK_API_KEY: ${MOLTBOOK_API_KEY:-}
-      CLAWHUB_API_KEY: ${CLAWHUB_API_KEY:-}
       ATTESTATION_ENABLED: ${ATTESTATION_ENABLED:-false}
-      BASE_RPC_URL: ${BASE_RPC_URL:-}
-      AEGIS_EAS_SCHEMA_UID: ${AEGIS_EAS_SCHEMA_UID:-}
       AEGIS_ATTESTATION_PRIVATE_KEY: ${AEGIS_ATTESTATION_PRIVATE_KEY:-}
-    volumes:
-      - aegis-data:/data
+      PAYMENT_WALLET: ${PAYMENT_WALLET:-}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
       interval: 30s
       timeout: 5s
       retries: 3
-
-volumes:
-  aegis-data:
