refactor: one wallet for both EAS signing and x402 payment receiving
- payment.ts: derive PAYMENT_RECEIVER from AEGIS_ATTESTATION_PRIVATE_KEY via
  ethers Wallet — same key, address computed automatically at startup
- Remove PAYMENT_WALLET env var entirely (was redundant)
- .env.example: document single-wallet approach clearly
- health endpoint: show attestation_enabled flag instead of redundant address
- apps/api: add ethers as direct dependency for address derivation

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@aegis-protocol/core": "workspace:*",
-    "fastify": "^4.26.0",
-    "@fastify/rate-limit": "^9.0.0",
     "@fastify/cors": "^9.0.0",
+    "@fastify/rate-limit": "^9.0.0",
     "dotenv": "^16.4.0",
+    "ethers": "^6.11.0",
+    "fastify": "^4.26.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
