--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,11 @@ MOLTBOOK_API_KEY=
 # Set to true to write trust scores on-chain via EAS on Base Mainnet
 ATTESTATION_ENABLED=false
 
-# Private key of the attestation wallet (0xAaa00Fef...)
+# Private key of the wallet used for BOTH:
+#   - Signing EAS attestation transactions (spends ETH for gas)
+#   - Receiving x402 USDC payments (the address is derived automatically)
+# Same wallet, one key. Fund it with a small amount of Base ETH for gas.
 AEGIS_ATTESTATION_PRIVATE_KEY=
-
-# x402 payment receiver (defaults to attestation wallet if unset)
-PAYMENT_WALLET=
 
 # ── API config ────────────────────────────────────────────────────────────────
 
