feat: Postgres persistence — x402 payments and identity links survive restarts
If an agent pays, we remember. If an agent verifies, we remember.

- db.ts: Postgres connection pool, auto-migration, graceful in-memory fallback
- Tables: attestation_free_tier, attestation_nonces, identity_links
- x402/store.ts: delegates to db.ts (async, transparent to callers)
- x402/payment.ts: awaits all store calls
- identity verify route: persists links to DB after verification
- Startup: initDb() + hydrates in-memory graph from DB on boot
- /health: reports DB backend (postgres vs memory) + live counts
- .env.example: DATABASE_URL documented

Add DATABASE_URL to Railway (Postgres add-on) to activate.

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ AEGIS_ATTESTATION_PRIVATE_KEY=
 
 # Public base URL of this API instance (used in x402 payment resources)
 BASE_URL=https://api.trstlyr.ai
+
+# ─── Database (Postgres) ──────────────────────────────────────────────────────
+# Required in production — persists identity links, x402 free tier, nonces
+# Falls back to in-memory if not set (data lost on restart)
+DATABASE_URL=postgresql://user:password@localhost:5432/trstlyr
