--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -20,12 +20,5 @@ jobs:
         with:
           version: latest
 
-      - name: Link to Supabase project
-        run: supabase link --project-ref ${{ vars.SUPABASE_PROJECT_ID }}
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-
       - name: Run migrations
-        run: supabase db push
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+        run: supabase db push --db-url "${{ secrets.SUPABASE_DB_URL }}"
