--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -21,7 +21,7 @@ jobs:
           version: latest
 
       - name: Link to Supabase project
-        run: supabase link --project-ref ${{ vars.SUPABASE_PROJECT_ID }}
+        run: supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID }}
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
