--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -10,6 +10,7 @@ jobs:
   migrate:
     name: Push migrations to Supabase
     runs-on: ubuntu-latest
+    environment: main
 
     steps:
       - name: Checkout
