--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -55,3 +55,14 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to:   type=gha,mode=max
+
+      - name: Trigger Railway redeploy
+        if: env.RAILWAY_DEPLOY_HOOK != ''
+        run: |
+          curl -s -X POST "$RAILWAY_DEPLOY_HOOK" \
+            -H "Content-Type: application/json" \
+            --fail \
+            && echo "Railway redeploy triggered ✅" \
+            || echo "Railway webhook failed (non-fatal) ⚠️"
+        env:
+          RAILWAY_DEPLOY_HOOK: ${{ secrets.RAILWAY_DEPLOY_HOOK }}
